--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -71,9 +71,7 @@
             {% endfor %}
 
             {% block body %}{% endblock %}
-        </div>
-
-        <footer class="footer footer-arz py-3">
+        </div>        <footer class="footer footer-arz py-3">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-md-6 text-md-start">
@@ -81,6 +79,8 @@
                     </div>
                     <div class="col-md-6 text-md-end">
                         <span>&copy; {{ 'now'|date('Y') }} ARZ Haan AG - Ticketumfrage-Tool</span>
+                        <br>
+                        <small class="text-muted">{{ app_version_string() }}</small>
                     </div>
                 </div>
             </div>
