--- a/templates/smtp_config/edit.html.twig
+++ b/templates/smtp_config/edit.html.twig
@@ -37,11 +37,16 @@
                         {{ form_row(form.password) }}
                     </div>
                 </div>
-                
-                <div class="row mt-3">
-                    <div class="col-md-12">
+                  <div class="row mt-3">
+                    <div class="col-md-6">
                         <div class="form-check">
                             {{ form_row(form.useTLS) }}
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-check">
+                            {{ form_row(form.verifySSL) }}
+                            <small class="form-text text-muted">Deaktivieren Sie diese Option, wenn Sie SSL-Zertifikatsfehler mit selbstsignierten Zertifikaten erhalten.</small>
                         </div>
                     </div>
                 </div>
