refactor(repository): Use constant for COUNT select in EmailSentRepository
fix(template): Update condition for hidden page input in email log template

--- a/templates/email_log/index.html.twig
+++ b/templates/email_log/index.html.twig
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        {% if search is empty %}
+        {% if pagination and currentPage > 1 %}
             <input type="hidden" name="page" value="{{ currentPage }}">
         {% endif %}
     </form>
