--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -127,6 +127,7 @@
                                         </span>
                                     </a>
                                 </th>
+                                <th>Von Umfragen ausgeschlossen</th>
                                 <th>Aktionen</th>
                             </tr>
                         </thead>
@@ -136,6 +137,12 @@
                                     <td>{{ user.id }}</td>
                                     <td>{{ user.username }}</td>
                                     <td>{{ user.email }}</td>
+                                    <td>
+                                        <form method="post" action="{{ path('user_toggle_exclude', {'id': user.id}) }}">
+                                            <input type="hidden" name="_token" value="{{ csrf_token('toggle_exclude' ~ user.id) }}">
+                                            <input type="checkbox" name="excluded" class="form-check-input" onchange="this.form.submit()" {% if user.excludedFromSurveys %}checked{% endif %}>
+                                        </form>
+                                    </td>
                                     <td>
                                         <div class="btn-group" role="group">
                                             <a href="{{ path('user_edit', {'id': user.id}) }}" class="btn btn-sm btn-primary">
