feat(user): add toggle functionality for excluding users from surveys

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -140,7 +140,9 @@
                                     <td>
                                         <form method="post" action="{{ path('user_toggle_exclude', {'id': user.id}) }}">
                                             <input type="hidden" name="_token" value="{{ csrf_token('toggle_exclude' ~ user.id) }}">
-                                            <input type="checkbox" name="excluded" class="form-check-input" onchange="this.form.submit()" {% if user.excludedFromSurveys %}checked{% endif %}>
+                                            <input type="checkbox" name="excluded" class="form-check-input" 
+                                                   onchange="if(confirm('Möchten Sie den Umfrage-Ausschluss für {{ user.username }} wirklich ändern?')) { this.form.submit(); } else { this.checked = !this.checked; }" 
+                                                   {% if user.excludedFromSurveys %}checked{% endif %}>
                                         </form>
                                     </td>
                                     <td>
