Füge ticket_created Spalte zur Tabelle emails_sent hinzu und aktualisiere die E-Mail-Datenstruktur zur Speicherung des Erstellungsdatums

--- a/templates/csv_upload/send_result.html.twig
+++ b/templates/csv_upload/send_result.html.twig
@@ -80,6 +80,7 @@
                         <tr>
                             <th>Ticket-ID</th>
                             <th>Name</th>
+                            <th>Erstellt</th>
                             <th>Benutzer</th>
                             <th>E-Mail</th>
                             <th>Status</th>
@@ -90,6 +91,7 @@
                             <tr>
                                 <td>{{ email.ticketId }}</td>
                                 <td>{{ email.ticketName }}</td>
+                                <td>{{ email.ticketCreated }}</td>
                                 <td>{{ email.username }}</td>
                                 <td>{{ email.email }}</td>                                <td>
                                     {% if email.status.isError %}
